# Atomic-Commit

./: .gitignore  Atomic-Commit.cabal  README.md  stack.yaml
app/: Main.hs
src/: DTLog.hs  Lib.hs  Utils.hs
